# xadmin

./: .env.example  .gitignore  .gitmodules  CODEBUDDY.md  LICENSE  Makefile  README.md  域名资产列表.xlsx
server/: config_example.yml  conftest.py  docker-compose.override.yml  pyproject.toml
server/apps/: __init__.py
server/apps/asset/: __init__.py  apps.py  choices.py  config.py  filing_checker.py  filters.py  models.py  relation_graph.py  serializers.py  signals.py  structs.py  tasks.py  urls.py  views.py
server/apps/asset/fixtures/: __init__.py  init_menu.json  initialize.py
server/apps/asset/migrations/: 0001_initial.py  0002_add_hardware_detail.py  0002_hardware_and_dns.py  0003_add_domain_filing.py  0004_add_domain_contacts.py  0005_add_filing_flags.py  0006_remove_domain_is_icp_filed_remove_domain_is_ps_filed.py  0007_remove_domain_icp_filing_date_and_more.py  0008_sslcertificate.py  0009_alter_sslcertificate_table_comment_and_more.py  0010_dnsrecord_is_ssl_enabled_and_more.py  0011_remove_domain_company_remove_domain_creator_and_more.py
server/apps/captcha/: __init__.py  admin.py  apps.py  helpers.py  models.py  tasks.py  tests.py  urls.py  utils.py  views.py
server/apps/captcha/management/: __init__.py
server/apps/captcha/migrations/: 0002_alter_captchastore_table_comment_and_more.py  0003_alter_captchastore_challenge_and_more.py
server/apps/cloud_platform/: __init__.py  apps.py  choices.py  config.py  filters.py  models.py  serializers.py  tasks.py  urls.py  views.py
server/apps/cloud_platform/fixtures/: __init__.py  init_menu.json  initialize.py
server/apps/cloud_platform/migrations/: 0001_init.py  0001_initial.py  0002_alter_cloudplatform_table_comment_and_more.py  0002_initial.py  0003_add_account_balance.py  0003_alter_cloudplatform_created_time_and_more.py  0004_add_balance_history.py  0005_syncrecord_syncagentlog.py  0006_alter_cloudplatform_platform_type.py
server/apps/cloud_platform/sync/: __init__.py  aliyun.py  base.py  engine.py  exceptions.py  huawei.py  meicheng.py  registry.py  schemas.py  tencent.py  vsphere.py
server/apps/common/: __init__.py  apps.py  decorators.py  local.py  models.py  notifications.py  serializers.py  signal_handlers.py  signals.py  startup.py  tasks.py  urls.py
server/apps/common/api/: __init__.py  common.py
server/apps/common/base/: magic.py  utils.py
server/apps/common/cache/: channel.py  redis.py  state.py  storage.py
server/apps/common/celery/: decorator.py  flower.py  heatbeat.py  logger.py  utils.py
server/apps/common/core/: auth.py  config.py  exception.py  fields.py  filter.py  middleware.py  models.py  modelset.py  pagination.py  permission.py  response.py  routers.py  serializers.py  throttle.py  utils.py  validators.py
server/apps/common/drf/: const.py  metadata.py
server/apps/common/fields/: char.py  encrypted.py  image.py  utils.py
server/apps/common/management/: __init__.py
server/apps/common/migrations/: 0002_alter_monitor_table_comment_alter_monitor_boot_time_and_more.py  0003_alter_monitor_boot_time_alter_monitor_cpu_load_and_more.py
server/apps/common/storage/: __init__.py  backends.py
server/apps/common/swagger/: utils.py  views.py
server/apps/common/utils/: __init__.py  common.py  connection.py  country.py  file.py  media.py  pending.py  random.py  request.py  timezone.py  token.py  verify_code.py
server/apps/company/: __init__.py  apps.py  choices.py  config.py  filters.py  models.py  serializers.py  urls.py  views.py
server/apps/company/fixtures/: init_menu.json  initialize.py
server/apps/company/migrations/: 0001_init.py  0001_initial.py  0002_add_company_fields.py  0002_alter_company_table_comment_alter_company_is_active_and_more.py  0003_alter_company_created_time_alter_company_creator_and_more.py  0003_change_file_fields.py
server/apps/demo/: __init__.py  admin.py  apps.py  choices.py  config.py  filters.py  models.py  tests.py  urls.py  views.py
server/apps/domain/: __init__.py  apps.py  choices.py  config.py  filing_checker.py  filters.py  models.py  post_sync.py  relation_graph.py  serializers.py  signals.py  tasks.py  urls.py  views.py
server/apps/message/: __init__.py  apps.py  base.py  notify.py  routing.py  utils.py
server/apps/notifications/: __init__.py  admin.py  apps.py  message.py  notifications.py  signal_handlers.py  tests.py  urls.py
server/apps/settings/: __init__.py  admin.py  apps.py  models.py  signal_handlers.py  tests.py  urls.py
server/apps/system/: __init__.py  admin.py  apps.py  notifications.py  signal.py  signal_handler.py  tasks.py  urls.py
server/loadjson/: menu.json  menumeta.json
server/server/: __init__.py  asgi.py  celery.py  conf.py  const.py  logging.py  middleware.py  urls.py  utils.py
server/server/settings/: __init__.py  base.py  custom.py  libs.py  logging.py  setting.py  storage.py  test.py
server/tests/: test_sync.py
server/utils/: init_data.py
(+249 files in other folders)
