[project]
name = "xadmin-server"
version = "4.2.1"
description = "基于 Django + Vue3 的 RBAC 权限管理系统后端服务"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "nineven" },
]
keywords = ["django", "rbac", "admin", "vue3", "permission"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    # ---- Web 框架核心 ----
    "django==5.2.9",
    "djangorestframework==3.16.1",
    "djangorestframework-simplejwt==5.5.1",
    "django-cors-headers==4.9.0",
    "django-filter==25.2",
    "django-redis==6.0.0",
    # 锁定 redis-py 5.x：channels-redis 4.3.0 的 BRPOP 阻塞读与 redis-py 8.x 的
    # socket_timeout 语义不兼容，空 channel receive 会每 5s 抛 TimeoutError。
    # channels-redis 4.3.0 声明 redis>=4.6 无上限，但代码未适配 8.x，故显式锁 5.x。
    "redis>=5.0,<6.0",
    "django-proxy==1.3.0",
    "django-ranged-response==0.2.0",
    "django-imagekit==6.0.0",
    "pilkit==3.0",
    # ---- ASGI / WebSocket ----
    "channels==4.3.2",
    "channels-redis==4.3.0",
    "daphne==4.2.1",
    "uvicorn==0.38.0",
    "gunicorn==23.0.0",
    "websockets==15.0.1",
    "aiofiles==24.1.0",
    # ---- API 文档 ----
    "drf-spectacular==0.29.0",
    "drf-spectacular-sidecar==2025.12.1",
    # ---- 异步任务 / 定时任务 ----
    "celery==5.6.0",
    "django-celery-beat==2.8.1",
    "django-celery-results==2.6.0",
    "flower==2.0.1",
    "python-daemon==3.1.2",
    # ---- 数据库驱动 ----
    "mysqlclient==2.2.7",
    "psycopg2-binary==2.9.11",
    # ---- Excel / CSV 处理 ----
    "openpyxl==3.2.0b1",
    "pyexcel==0.7.4",
    "pyexcel-xlsx==0.6.1",
    "unicodecsv==0.14.1",
    # ---- 地理位置与 IP 解析 ----
    "geoip2==5.2.0",
    "ipip-ipdb==1.6.1",
    "pycountry==24.6.1",
    "phonenumbers==9.0.20",
    "user-agents==2.2.0",
    # ---- 加密 / 安全 / 认证 ----
    "pycryptodomex==3.23.0",
    "pyotp==2.9.0",
    "pyzipper==0.3.6",
    # ---- 短信 / 通知 ----
    "alibabacloud-dysmsapi20170525==4.3.0",
    # ---- 云存储 ----
    "django-storages[s3]==1.14.6",
    # ---- 工具库 ----
    "requests==2.32.5",
    "chardet==5.2.0",
    "html2text==2025.4.15",
    "psutil==7.1.3",
]

# 开发依赖组，不会打包进生产环境
# 安装方式: uv sync 或 uv sync --group dev
[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "debugpy>=1.8.0",
    "ipython>=8.30.0",
    "ipdb>=0.13.13",
    "django-stubs>=5.1.0",
    "pytest>=8.0",
    "pytest-django>=4.8",
]

[test]
requires = ["pytest>=8.0", "pytest-django>=4.8"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "server.settings.test"
addopts = "-v --tb=short"
testpaths = ["apps"]

# Django 应用项目，不需要作为 Python 包构建发布
[tool.uv]
package = false

# Ruff 代码检查与格式化配置
# 使用方式: uv run ruff check . / uv run ruff format .
[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = [
    "migrations",
    "data",
    "tmp",
    "loadjson",
    "locale",
]

[tool.ruff.lint]
# 启用的规则集
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import 排序)
    "B",    # flake8-bugbear (常见 bug 模式)
    "UP",   # pyupgrade (语法升级提示)
    "C4",   # flake8-comprehensions (推导式优化)
    # ---- docstring 完整性检查（公共模块/类/方法/函数是否缺少 docstring）----
    "D100",  # 缺少模块级 docstring
    "D101",  # 缺少公共类 docstring
    "D102",  # 缺少公共方法 docstring
    "D103",  # 缺少公共函数 docstring
    "D104",  # 缺少包级 docstring
    "D105",  # 缺少魔术方法 docstring
    "D106",  # 缺少嵌套类 docstring
    "D107",  # 缺少 __init__ docstring
    # ---- 类型标注完整性检查（函数参数和返回值是否缺少类型标注）----
    "ANN001",  # 函数参数缺少类型标注
    "ANN201",  # 公共函数缺少返回类型标注
    "ANN202",  # 私有函数缺少返回类型标注
]
ignore = [
    "E501",  # 行长度由 formatter 统一管理
    "B008",  # Django 中常见函数调用默认值（如 models.CharField）
]

[tool.ruff.lint.isort]
known-first-party = ["server", "system", "settings", "common", "notifications", "captcha", "message"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

# django-stubs 配置
# 注意: django-stubs 的 mypy 插件仅在 mypy 下生效，pyright/basedpyright 仅使用其类型存根
[tool.django-stubs]
django_settings_module = "server.settings"

# basedpyright 类型检查配置
# 文档: https://docs.basedpyright.com/latest/configuration/config-files/
[tool.basedpyright]
# 将项目根目录加入导入路径（与 VS Code python.analysis.extraPaths 对齐）
extraPaths = ["."]
# Django 动态特性较多，缺少存根的第三方包不报错
reportMissingTypeStubs = "none"
# 隐式字符串拼接在 Django 代码中常见，不报错
reportImplicitStringConcatenation = "none"
# 函数参数缺少类型标注时告警（与 ruff ANN001 互补，强化类型标注完整性）
reportMissingParameterType = "warning"
